Add QR code search component and update certificates
Introduced a new search component under auth for QR code functionality, added 'angularx-qrcode' dependency, and updated certificate PDF components to support QR code display. Removed unused image assets and updated environment configurations.

--- a/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
@@ -82,7 +82,9 @@
                 <div class="mb-2 text-black">
                     @if (certificadoData.pedidoLicencaAtividade.aplicante.categoria === 'COMERCIAL') {
                     <p>O Diretor-Geral do Comércio</p>
-                    <br>
+                    @if (imageUrl) {
+                    <img [src]="imageUrl" alt="Signature" style="max-width: 150px" />
+                    }
                     <p class="text-gray-600">
                         {{certificadoData.nomeDiretorGeral}}
                     </p>
@@ -96,8 +98,9 @@
 
                 </div>
             </div>
-            <div class="col-span-1">
-                <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
+            <div class="col-span-1 pt-14">
+                <qrcode [qrdata]="qrcodeUrl()" [margin]="0" [width]="120" elementType="canvas">
+                </qrcode>
             </div>
         </div>
     </div>
