Add dark mode toggle to topbar and update styles
Introduced a dark mode toggle button in the topbar, allowing users to switch between light and dark themes. Removed the unused AppConfigurator component from the layout. Updated styles in the 'inicio' page for improved theme compatibility and visual consistency.

--- a/src/app/layout/components/topbar/app.topbar.html
+++ b/src/app/layout/components/topbar/app.topbar.html
@@ -13,6 +13,13 @@
  </div>
  <div class="topbar-end">
      <ul class="topbar-menu">
+        <li class="topbar-item">
+             @if (layoutService.isDarkTheme()) {
+             <p-button (click)="toggleDarkMode()" [rounded]="true" icon="pi pi-moon" [outlined]="true" [text]="true" [severity]="'secondary'" />
+             } @else {
+             <p-button (click)="toggleDarkMode()" [rounded]="true" icon="pi pi-sun" [outlined]="true" [text]="true" [severity]="'secondary'" />
+             }
+         </li>
          <li class="profile-item topbar-item">
              @if (unreadCount > 0) {
              <p-overlaybadge [value]="unreadCount">
@@ -26,7 +33,6 @@
                  rounded></button>
              }
          </li>
-
          <li class="profile-item topbar-item">
 
          </li>
@@ -39,7 +45,7 @@
                      {{user.firstName}} {{user.lastName}}
                  </span>
                  <a>
-                     <img class="rounded-full" src="/images/user.webp"/>
+                     <img class="rounded-full" src="/images/user.webp" />
                  </a>
              </div>
 
