--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,8 +1,8 @@
 <div class="text-center mb-8">
-    <h2 class="text-2xl font-semibold ">
+    <h2 class="text-2xl font-semibold">
         Selecione o tipo de serviço de que necessita para continuar
     </h2>
-    <p class="text-gray-400  mt-2">
+    <p class="text-gray-900 dark:text-gray-400 mt-2">
         Escolha entre as nossas soluções Comercial ou Industrial, adaptadas às necessidades do seu negócio.
     </p>
 </div>
@@ -11,7 +11,7 @@
         <div class=" bg-gray-800 rounded-xl !p-4 cursor-pointer hover-scale" (click)="showDialog(comercial)">
             <div class="flex flex-col items-center justify-center h-full p-4">
                 <i class="bi bi-cart3 text-emerald-400 mb-2" style="font-size: 3.5rem"></i>
-                <span class="text-xl font-semibol">Comercial</span>
+                <span class="text-xl font-semibol text-surface-50">Comercial</span>
             </div>
         </div>
     </div>
@@ -19,7 +19,7 @@
         <div class="bg-gray-800 rounded-xl !p-4 cursor-pointer hover-scale" (click)="showDialog(industrial)">
             <div class="flex flex-col items-center justify-center h-full p-4">
                 <i class="bi bi-building-gear text-emerald-400 mb-2" style="font-size: 3.5rem"></i>
-                <span class="text-xl font-semibol">Industrial</span>
+                <span class="text-xl font-semibol text-surface-50">Industrial</span>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
             <i class="bi bi-buildings text-emerald-400 text-3xl"></i>
         </div>
         <div>
-            <h1 class="text-3xl font-bold text-white">
+            <h1 class="text-3xl font-bold">
                 {{empresa.nome}}, {{empresa.sociedadeComercial.nome}}
             </h1>
         </div>
