Implement dynamic filtering for classeAtividade fields
Added dynamic filtering for classeAtividade selection in multiple forms and components, enabling search by code with a minimum of two digits. Refactored data master service to support search by code, updated related HTML templates, and removed unused or redundant form fields and console logs. Adjusted routes and data loading to use paginated resolvers and improved localization in empresa list. Also updated role access for auto-vistoria in gestor routes.

--- a/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
@@ -87,8 +87,9 @@
                  Atividade Principal exercida no Estabelecimento
              </label>
              <p-select formControlName="classeAtividade" (onChange)="atividadePrincipalChange($event)"
-                 inputId="classeAtividade" [options]="listaClasseAtividade" optionLabel="codigo" fluid [filter]="true"
-                 filterBy="codigo,descricao" [showClear]="true" placeholder="Selecione a atividade principal">
+                 (onFilter)="classeAtividadeFilter($event)" inputId="classeAtividade" [options]="listaClasseAtividade"
+                 optionLabel="codigo" fluid [filter]="true" filterBy="codigo,descricao" [showClear]="true"
+                 placeholder="Selecione a atividade principal">
                  <ng-template let-tipo #item>
                      <div class="flex items-center gap-2">
                          <span>{{tipo.codigo}} </span> - <span>{{tipo.descricao}} </span>
