Add signature image to certificate PDF template
Displays a signature image in the certificate PDF if 'imageUrl' is provided, enhancing the authenticity of the document.

--- a/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
@@ -90,7 +90,9 @@
                     </p>
                     } @else {
                     <p>O Diretor-Geral da Indústria</p>
-                    <br>
+                    @if (imageUrl) {
+                    <img [src]="imageUrl" alt="Signature" style="max-width: 150px" />
+                    }
                     <p class="text-gray-600">
                         {{certificadoData.nomeDiretorGeral}}
                     </p>
