Add search and pagination to application list
Introduced search functionality with debounce for applications, supporting both global and per-company search. Added paginator to the application list and updated related services to support search and paginated queries. Also localized paginator labels in related components.

--- a/src/app/pages/dados-mestre/lista/lista.component.html
+++ b/src/app/pages/dados-mestre/lista/lista.component.html
@@ -49,7 +49,7 @@
     </p-table>
     <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
         [rowsPerPageOptions]="[50, 150, 250]" [showCurrentPageReport]="true"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords}" />
+        currentPageReportTemplate="A mostrar {first} a {last} de {totalRecords}" />
 </div>
 
 <p-toast position="bottom-right" />
