--- a/src/app/pages/application-management/application-cadastro-detail/application-list/application-list.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/application-list/application-list.component.html
@@ -1,87 +1,89 @@
-<div class="card">
-    <p-table #dt [value]="applications" [paginator]="true" paginatorDropdownAppendTo="body" [rows]="10"
-        [showCurrentPageReport]="true" responsiveLayout="scroll"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[10, 25, 50]"
-        [globalFilterFields]="['candidatura.numero', 'candidatura.empresa.nome', 'candidatura.categoria', 'candidatura.tipo']">
-        <ng-template #caption>
-            <div class="flex flex-wrap gap-2 items-center justify-between">
-                <p-icon-field class="w-1/2 sm:w-80 order-1 sm:order-none">
-                    <p-inputicon class="pi pi-search" />
-                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Busca"
-                        class="w-full" />
-                </p-icon-field>
-                <!-- <button pButton outlined routerLink="/application/create"
-                    class="w-full sm:w-auto flex-order-0 sm:flex-order-1" icon="pi pi-plus"
-                    label="Adicionar novo"></button> -->
-            </div>
-        </ng-template>
-        <ng-template #header>
-            <tr>
-                <th pSortableColumn="candidatura.numero" class="white-space-nowrap">Nº da Aplicante
-                    <p-sortIcon field="candidatura.numero">
-                    </p-sortIcon>
-                </th>
-                @if (currentRole === roleAdmin) {
-                <th pSortableColumn="firstName" class="white-space-nowrap">Empresa
-                    <p-sortIcon field="firstName">
-                    </p-sortIcon>
-                </th>
-                }
-                <th pSortableColumn="categoria" class="white-space-nowrap">Categoria <p-sortIcon field="categoria">
-                    </p-sortIcon>
-                <th pSortableColumn="nomeEmpresa" class="white-space-nowrap">Tipo<p-sortIcon field="nomeEmpresa">
-                    </p-sortIcon>
-                </th>
-                <th pSortableColumn="role.name" class="white-space-nowrap">Criado em<p-sortIcon field="role.name">
-                    </p-sortIcon>
-                </th>
-                <th pSortableColumn="status" class="white-space-nowrap">Estado <p-sortIcon field="activity">
-                    </p-sortIcon>
-                </th>
-                <th class="white-space-nowrap">
-                    Ações
-                </th>
-            </tr>
-        </ng-template>
-        <ng-template #body let-candidatura>
-            <tr>
-                <td>
-                    {{ candidatura.numero }}
-                </td>
-                @if (currentRole === roleAdmin) {
-                <td>
-                    {{candidatura.empresa.nome}}
-                </td>
-                }
-                <td>
-                    {{ candidatura.categoria }}
-                </td>
-                <td>
-                    {{candidatura.tipo}}
-                </td>
-                <td>
-                    {{ candidatura.createdAt | date: 'dd/MMM/yyyy, HH:mm:ss' }}
-                </td>
-                <td>
-                    <p-tag value="{{candidatura.estado.replace('_', ' ') | uppercase}}"
-                        [severity]="candidatura.estado | statusSeverity" icon="{{candidatura.estado | statusIcon}}" />
-                </td>
-
-                <td>
-                    <a (click)="toDetail(candidatura)" pTooltip="Detalho" tooltipPosition="top">
-                        <p-button icon="pi pi-eye" class="mr-2" severity="info" [rounded]="true" [outlined]="true" />
-                    </a>
-                    @if (candidatura.estado === 'EM_CURSO' || candidatura.estado === 'REJEITADO') {
-                    <a (click)="delete(candidatura)">
-                        <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
-                            pTooltip="Eliminar" tooltipPosition="top" />
-                    </a>
+<div class="min-h-[720px]">
+    <div class="card">
+        <p-table #dt [value]="applications" responsiveLayout="scroll"
+            [globalFilterFields]="['candidatura.numero', 'candidatura.empresa.nome', 'candidatura.categoria', 'candidatura.tipo']">
+            <ng-template #caption>
+                <div class="flex flex-wrap gap-2 items-center justify-between">
+                    <p-icon-field class="w-1/2 sm:w-80 order-1 sm:order-none">
+                        <p-inputicon class="pi pi-search" />
+                        <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Busca"
+                            class="w-full" />
+                    </p-icon-field>
+                </div>
+            </ng-template>
+            <ng-template #header>
+                <tr>
+                    <th pSortableColumn="candidatura.numero" class="white-space-nowrap">Nº da Aplicante
+                        <p-sortIcon field="candidatura.numero">
+                        </p-sortIcon>
+                    </th>
+                    @if (currentRole === roleAdmin) {
+                    <th pSortableColumn="firstName" class="white-space-nowrap">Empresa
+                        <p-sortIcon field="firstName">
+                        </p-sortIcon>
+                    </th>
                     }
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
+                    <th pSortableColumn="categoria" class="white-space-nowrap">Categoria <p-sortIcon field="categoria">
+                        </p-sortIcon>
+                    <th pSortableColumn="nomeEmpresa" class="white-space-nowrap">Tipo<p-sortIcon field="nomeEmpresa">
+                        </p-sortIcon>
+                    </th>
+                    <th pSortableColumn="role.name" class="white-space-nowrap">Criado em<p-sortIcon field="role.name">
+                        </p-sortIcon>
+                    </th>
+                    <th pSortableColumn="status" class="white-space-nowrap">Estado <p-sortIcon field="activity">
+                        </p-sortIcon>
+                    </th>
+                    <th class="white-space-nowrap">
+                        Ações
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template #body let-candidatura>
+                <tr>
+                    <td>
+                        {{ candidatura.numero }}
+                    </td>
+                    @if (currentRole === roleAdmin) {
+                    <td>
+                        {{candidatura.empresa.nome}}
+                    </td>
+                    }
+                    <td>
+                        {{ candidatura.categoria }}
+                    </td>
+                    <td>
+                        {{candidatura.tipo}}
+                    </td>
+                    <td>
+                        {{ candidatura.createdAt | date: 'dd/MMM/yyyy, HH:mm:ss' }}
+                    </td>
+                    <td>
+                        <p-tag value="{{candidatura.estado.replace('_', ' ') | uppercase}}"
+                            [severity]="candidatura.estado | statusSeverity"
+                            icon="{{candidatura.estado | statusIcon}}" />
+                    </td>
+
+                    <td>
+                        <a (click)="toDetail(candidatura)" pTooltip="Detalho" tooltipPosition="top">
+                            <p-button icon="pi pi-eye" class="mr-2" severity="info" [rounded]="true"
+                                [outlined]="true" />
+                        </a>
+                        @if (candidatura.estado === 'EM_CURSO' || candidatura.estado === 'REJEITADO') {
+                        <a (click)="delete(candidatura)">
+                            <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
+                                pTooltip="Eliminar" tooltipPosition="top" />
+                        </a>
+                        }
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+        <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
+            [rowsPerPageOptions]="[50, 250, 500, 1000]" [showCurrentPageReport]="true"
+            currentPageReportTemplate="A mostrar {first} a {last} de {totalRecords}" />
+    </div>
 </div>
+
 <p-confirmdialog />
 <p-toast />
