--- a/src/app/pages/licencas-certificados/certificados-lista/certificados-lista.component.html
+++ b/src/app/pages/licencas-certificados/certificados-lista/certificados-lista.component.html
@@ -38,7 +38,8 @@
                     {{cert.sociedadeComercial}}
                 </td>
                 <td>
-                    {{cert.sedeLocal}} - {{cert.sedeAldeiaNome}}, {{cert.sedeSucoNome}}, {{cert.sedePostoNome}}, {{cert.sedeMunicipioNome}}
+                    {{cert.sedeLocal}} - {{cert.sedeAldeiaNome}}, {{cert.sedeSucoNome}}, {{cert.sedePostoNome}},
+                    {{cert.sedeMunicipioNome}}
                 </td>
                 <td>
                     {{ cert.dataValidade | date: 'dd/MM/yyyy'}}
@@ -49,8 +50,7 @@
                         icon="{{getState(cert.dataValidade) | statusIcon}}" />
                 </td>
                 <td>
-                    <a [routerLink]="[cert.id]" pTooltip="Detalho"
-                        tooltipPosition="top">
+                    <a [routerLink]="[cert.id]" pTooltip="Detalho" tooltipPosition="top">
                         <p-button icon="pi pi-eye" class="mr-2" severity="info" [rounded]="true" [outlined]="true" />
                     </a>
                 </td>
@@ -59,5 +59,5 @@
     </p-table>
     <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
         [rowsPerPageOptions]="[50, 150, 250]" [showCurrentPageReport]="true"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords}" />
+        currentPageReportTemplate="A mostrar {first} a {last} de {totalRecords}" />
 </div>
