Allow image uploads in file upload components
Updated file upload components to accept both PDF and image files by changing the accept attribute to 'application/pdf,image/*' in relevant HTML templates.

--- a/src/app/pages/application-management/application-atividade-detail/fatura-vistoria-form/fatura-vistoria-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/fatura-vistoria-form/fatura-vistoria-form.component.html
@@ -57,7 +57,7 @@
          <div class="card">
              <p-fileupload name="file" [disabled]="uploadedFiles.length > 0" method="put" [chooseLabel]="'Selecione'"
                  [uploadLabel]="'Carregar'" [cancelLabel]="'Cancelar'" (onUpload)="onUpload($event, 'advanced')"
-                 [maxFileSize]="maxFileSize" [multiple]="false" accept="application/pdf" mode="advanced"
+                 [maxFileSize]="maxFileSize" [multiple]="false" accept="application/pdf,image/*" mode="advanced"
                  [url]="uploadUrl()">
                  <ng-template #empty>
                      @if (uploadedFiles.length === 0) {
