--- a/src/app/pages/application-management/application-cadastro-detail/application-cadastro-detail.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/application-cadastro-detail.component.html
@@ -646,7 +646,7 @@
                              <div class="card">
                                  <p-fileupload name="file" [disabled]="uploadedFiles.length > 0" method="put"
                                      (onUpload)="onUpload($event, 'advanced')" [maxFileSize]="maxFileSize"
-                                     [multiple]="false" accept="application/pdf" mode="advanced" [url]="uploadUrl()">
+                                     [multiple]="false" accept="application/pdf,image/*" mode="advanced" [url]="uploadUrl()">
                                      <ng-template #empty>
                                          @if (uploadedFiles.length === 0) {
                                          Arraste e largue os ficheiros aqui para carregar.
