--- a/src/app/pages/empresa/empresa-list/empresa-list.component.html
+++ b/src/app/pages/empresa/empresa-list/empresa-list.component.html
@@ -1,69 +1,74 @@
-<div class="card">
-    <p-table #dt [value]="data" [paginator]="true" paginatorDropdownAppendTo="body" [rows]="10"
-        [showCurrentPageReport]="true" responsiveLayout="scroll"
-        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} entradas"
-        [rowsPerPageOptions]="[10, 25, 50]" [globalFilterFields]="['firstName', 'role.name', 'email', 'status']">
-        <ng-template #caption>
-            <div class="flex flex-wrap gap-2 items-center justify-between">
-                <p-icon-field class="w-full sm:w-80 order-1 sm:order-none">
-                    <p-inputicon class="pi pi-search" />
-                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Buscar"
-                        class="w-full" />
-                </p-icon-field>
-            </div>
-        </ng-template>
-        <ng-template #header>
-            <tr>
-                <th pSortableColumn="nome" class="white-space-nowrap">Nome
-                    <p-sortIcon field="nome">
-                    </p-sortIcon>
-                </th>
-                <th pSortableColumn="email" class="white-space-nowrap">Email<p-sortIcon field="email">
-                    </p-sortIcon>
-                </th>
-                <th class="white-space-nowrap">
-                    Local
-                </th>
-                <th pSortableColumn="gerente" class="white-space-nowrap">Gerente
-                    <p-sortIcon field="gerente">
-                    </p-sortIcon>
-                </th>
-                <th class="white-space-nowrap">Telefone
-                </th>
-                <th class="white-space-nowrap">
-                    Criado em
-                </th>
-                <th class="white-space-nowrap">
-                    Ações
-                </th>
-            </tr>
-        </ng-template>
-        <ng-template #body let-empresa>
-            <tr>
-                <td>
-                    {{ empresa.nome }}
-                </td>
-                <td>
-                    {{empresa.utilizador.email}}
-                </td>
-                <td>
-                    {{empresa.sede.local}} - {{empresa.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
-                </td>
-                <td>
-                    {{empresa.gerente.nome}}
-                </td>
-                <td>
-                    {{empresa.telefone}}
-                </td>
-                <td>
-                    {{ empresa.createdAt | date: 'MM/dd/yyyy, HH:mm:ss' }}
-                </td>
-                <td>
-                    <a routerLink="/empresa/detail/{{empresa.utilizador.username}}" pTooltip="Detalho" tooltipPosition="top">
-                        <p-button icon="pi pi-eye" class="mr-2" severity="info" [rounded]="true" [outlined]="true" />
-                    </a>
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
+<div class="min-h-[720px]">
+    <div class="card">
+        <p-table #dt [value]="data" [globalFilterFields]="['firstName', 'role.name', 'email', 'status']"
+            [loading]="dataIsFetching">
+            <ng-template #caption>
+                <div class="flex flex-wrap gap-2 items-center justify-between">
+                    <p-icon-field class="w-full sm:w-80 order-1 sm:order-none">
+                        <p-inputicon class="pi pi-search" />
+                        <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Buscar"
+                            class="w-full" />
+                    </p-icon-field>
+                </div>
+            </ng-template>
+            <ng-template #header>
+                <tr>
+                    <th pSortableColumn="nome" class="white-space-nowrap">Nome
+                        <p-sortIcon field="nome">
+                        </p-sortIcon>
+                    </th>
+                    <th pSortableColumn="email" class="white-space-nowrap">Email<p-sortIcon field="email">
+                        </p-sortIcon>
+                    </th>
+                    <th class="white-space-nowrap">
+                        Local
+                    </th>
+                    <th pSortableColumn="gerente" class="white-space-nowrap">Gerente
+                        <p-sortIcon field="gerente">
+                        </p-sortIcon>
+                    </th>
+                    <th class="white-space-nowrap">Telefone/Telemóvel
+                    </th>
+                    <th class="white-space-nowrap">
+                        Criado em
+                    </th>
+                    <th class="white-space-nowrap">
+                        Ações
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template #body let-empresa>
+                <tr>
+                    <td>
+                        {{ empresa.nome }}
+                    </td>
+                    <td>
+                        {{empresa.utilizador.email}}
+                    </td>
+                    <td>
+                        {{empresa.sede.local}} - {{empresa.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
+                    </td>
+                    <td>
+                        {{empresa.gerente.nome}}
+                    </td>
+                    <td>
+                        {{empresa.telefone}}/{{empresa.telemovel}}
+                    </td>
+                    <td>
+                        {{ empresa.createdAt | date: 'dd/MM/yyyy, HH:mm:ss' }}
+                    </td>
+                    <td>
+                        <a routerLink="/empresa/detail/{{empresa.utilizador.username}}" pTooltip="Detalho"
+                            tooltipPosition="top">
+                            <p-button icon="pi pi-eye" class="mr-2" severity="info" [rounded]="true"
+                                [outlined]="true" />
+                        </a>
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+        <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
+            [rowsPerPageOptions]="[50, 250, 500, 1000]" [showCurrentPageReport]="true"
+            currentPageReportTemplate="A mostrar {first} a {last} de {totalRecords}" />
+    </div>
 </div>
