--- a/src/app/pages/usermanagement/userlist.html
+++ b/src/app/pages/usermanagement/userlist.html
@@ -1,68 +1,72 @@
-<div class="card">
-    <p-table #dt [value]="users" [paginator]="true" paginatorDropdownAppendTo="body" [rows]="10"
-        [showCurrentPageReport]="true" responsiveLayout="scroll"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[10, 25, 50]" [globalFilterFields]="['firstName', 'role.name', 'email', 'status']">
-        <ng-template #caption>
-            <div class="flex flex-wrap gap-2 items-center justify-between">
-                <p-icon-field class="w-full sm:w-80 order-1 sm:order-none">
-                    <p-inputicon class="pi pi-search" />
-                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Pesquisa"
-                        class="w-full" />
-                </p-icon-field>
-                <button (click)="navigateToCreateUser()" pButton outlined
-                    class="w-full sm:w-auto flex-order-0 sm:flex-order-1" icon="pi pi-user-plus"
-                    label="Adicionar novo"></button>
-            </div>
-        </ng-template>
-        <ng-template #header>
-            <tr>
-                <th pSortableColumn="firstName" class="white-space-nowrap" style="width:23%">Nome<p-sortIcon
-                        field="firstName">
-                    </p-sortIcon>
-                </th>
-                <th pSortableColumn="email" class="white-space-nowrap" style="width:23%">Email <p-sortIcon
-                        field="email">
-                    </p-sortIcon>
-                </th>
-                <th pSortableColumn="role.name" class="white-space-nowrap" style="width:10%">Papel <p-sortIcon
-                        field="role.name"></p-sortIcon>
-                </th>
-                <th pSortableColumn="createdAt" class="white-space-nowrap" style="width:23%">Criado em <p-sortIcon
-                        field="createdAt"></p-sortIcon>
-                </th>
-                <th pSortableColumn="status" class="white-space-nowrap">Estado <p-sortIcon field="activity"
-                        style="width:10%">
-                    </p-sortIcon>
-                </th>
-                 <th class="white-space-nowrap">
-                    Ações
-                </th>
-            </tr>
-        </ng-template>
-        <ng-template #body let-user>
-            <tr>
-                <td>
-                    {{ user.firstName }} {{ user.lastName }}
-                </td>
-                <td>
-                    {{user.email}}
-                </td>
-                <td>
-                    {{user.role.name.replace('ROLE_', '')}}
-                </td>
-                <td>
-                    {{ user.createdAt | date: 'MM/dd/yyyy, HH:mm:ss' }}
-                </td>
-                <td>
-                    <p-tag value="{{user.status | titlecase}}" [severity]="user.status | statusSeverity"
-                        icon="{{user.status | statusIcon}}" />
-                </td>
-                <td>
-                    <p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" severity="warn" [raised]="true"
-                        variant="outlined" [routerLink]="['/utilizador', user.username]" />
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
+<div class="min-h-[720px]">
+    <div class="card">
+        <p-table #dt [value]="users" responsiveLayout="scroll" [loading]="dataIsFetching"
+            [globalFilterFields]="['firstName', 'role.name', 'email', 'status']">
+            <ng-template #caption>
+                <div class="flex flex-wrap gap-2 items-center justify-between">
+                    <p-icon-field class="w-full sm:w-80 order-1 sm:order-none">
+                        <p-inputicon class="pi pi-search" />
+                        <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Pesquisa"
+                            class="w-full" />
+                    </p-icon-field>
+                    <button (click)="navigateToCreateUser()" pButton outlined
+                        class="w-full sm:w-auto flex-order-0 sm:flex-order-1" icon="pi pi-user-plus"
+                        label="Adicionar novo"></button>
+                </div>
+            </ng-template>
+            <ng-template #header>
+                <tr>
+                    <th pSortableColumn="firstName" class="white-space-nowrap" style="width:23%">Nome<p-sortIcon
+                            field="firstName">
+                        </p-sortIcon>
+                    </th>
+                    <th pSortableColumn="email" class="white-space-nowrap" style="width:23%">Email <p-sortIcon
+                            field="email">
+                        </p-sortIcon>
+                    </th>
+                    <th pSortableColumn="role.name" class="white-space-nowrap" style="width:10%">Papel <p-sortIcon
+                            field="role.name"></p-sortIcon>
+                    </th>
+                    <th pSortableColumn="createdAt" class="white-space-nowrap" style="width:23%">Criado em <p-sortIcon
+                            field="createdAt"></p-sortIcon>
+                    </th>
+                    <th pSortableColumn="status" class="white-space-nowrap">Estado <p-sortIcon field="activity"
+                            style="width:10%">
+                        </p-sortIcon>
+                    </th>
+                    <th class="white-space-nowrap">
+                        Ações
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template #body let-user>
+                <tr>
+                    <td>
+                        {{ user.firstName }} {{ user.lastName }}
+                    </td>
+                    <td>
+                        {{user.email}}
+                    </td>
+                    <td>
+                        {{user.role.name.replace('ROLE_', '')}}
+                    </td>
+                    <td>
+                        {{ user.createdAt | date: 'MM/dd/yyyy, HH:mm:ss' }}
+                    </td>
+                    <td>
+                        <p-tag value="{{user.status | titlecase}}" [severity]="user.status | statusSeverity"
+                            icon="{{user.status | statusIcon}}" />
+                    </td>
+                    <td>
+                        <p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" severity="warn" [raised]="true"
+                            variant="outlined" [routerLink]="['/utilizador', user.username]" />
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+        <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
+            [rowsPerPageOptions]="[50, 250, 500]" [showCurrentPageReport]="true"
+            currentPageReportTemplate="A mostrar {first} a {last} de {totalRecords}" />
+    </div>
 </div>
+<p-toast />
