Auto-upload and email certificates after approval
Add background upload/send flow for generated certificates: new CertificadoService.sendCertificadoToEmailById and DocumentosService.upload endpoints. Certificate PDF components (cadastro and atividade) now replace <img> signatures with background divs, include PrimeNG Toast, and implement autoUpload (query param) to auto-generate a PDF, convert it to blob and post it to the server while showing success/error toasts. Summary component updated to navigate to the appropriate certificate PDF route with autoUpload=true after applicant approval and adjusted the approval message. Also switched PDF image export to JPEG and added minor imports/providers to support messaging.

--- a/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
@@ -83,7 +83,9 @@
                     @if (certificadoData.pedidoLicencaAtividade.aplicante.categoria === 'COMERCIAL') {
                     <p>O Diretor-Geral do Comércio</p>
                     @if (imageUrl) {
-                    <img [src]="imageUrl" alt="Signature" style="max-width: 150px" />
+                    <div [style.background-image]="'url(' + imageUrl + ')'"
+                        style="background-size: contain; background-repeat: no-repeat; background-position: center; width: 150px; height: 100px; margin: 0 auto; pointer-events: none;">
+                    </div>
                     }
                     <p class="text-gray-600">
                         {{certificadoData.nomeDiretorGeral}}
@@ -91,7 +93,9 @@
                     } @else {
                     <p>O Diretor-Geral da Indústria</p>
                     @if (imageUrl) {
-                    <img [src]="imageUrl" alt="Signature" style="max-width: 150px" />
+                    <div [style.background-image]="'url(' + imageUrl + ')'"
+                        style="background-size: contain; background-repeat: no-repeat; background-position: center; width: 150px; height: 100px; margin: 0 auto; pointer-events: none;">
+                    </div>
                     }
                     <p class="text-gray-600">
                         {{certificadoData.nomeDiretorGeral}}
@@ -108,3 +112,4 @@
     </div>
 </div>
 }
+<p-toast position="bottom-right" key="br" />
