--- a/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
@@ -78,7 +78,9 @@
                     <div class="mb-2 text-black">
                         <p>O Diretor-Geral do Comércio</p>
                         @if (imageUrl) {
-                        <img [src]="imageUrl" alt="Signature" style="max-width: 150px" />
+                        <div [style.background-image]="'url(' + imageUrl + ')'"
+                            style="background-size: contain; background-repeat: no-repeat; background-position: center; width: 150px; height: 100px; margin: 0 auto; pointer-events: none;">
+                        </div>
                         }
                         <p class="text-gray-950">
                             {{certificadoData.nomeDiretorGeral}}
@@ -159,7 +161,9 @@
                     <div class="mb-2 text-black">
                         <p>O Diretor-Geral da Indústria</p>
                         @if (imageUrl) {
-                        <img [src]="imageUrl" alt="Signature" style="max-width: 150px" />
+                        <div [style.background-image]="'url(' + imageUrl + ')'"
+                            style="background-size: contain; background-repeat: no-repeat; background-position: center; width: 150px; height: 100px; margin: 0 auto; pointer-events: none;">
+                        </div>
                         }
                         <p class="text-gray-950">
                             {{certificadoData.nomeDiretorGeral}}
@@ -180,3 +184,4 @@
     </div>
 </div>
 }
+<p-toast position="bottom-right" key="br" />
