Enable map click to filter charts by municipality
Make dashboard charts interactive when a municipality is selected on the map. Added DashboardService.getByCategory to fetch category distributions for a municipality. EmpresaMapComponent now emits municipioSelected on map point clicks and enables pointer/select styles. DashboardComponent listens for municipioSelected and updates empresasBySociedadeComercial and empresasByTipoEmpresa using the new service method. CertificadoLicencaMunicipioPieComponent now implements OnChanges and uses an updateFlag (toggled after regenerating colors) to force Highcharts to update when input data changes. Also includes minor template formatting and attribute additions for chart identification.

--- a/src/app/pages/dashboard/certificado-licenca-municipio-pie/certificado-licenca-municipio-pie.component.html
+++ b/src/app/pages/dashboard/certificado-licenca-municipio-pie/certificado-licenca-municipio-pie.component.html
@@ -3,7 +3,7 @@
         {{title}}
     </div>
     <div class="flex justify-center mb-8">
-        <highcharts-chart [options]="chartOptions" style="width: 100%; max-height: 300px; display: block;">
+        <highcharts-chart [options]="chartOptions" [update]="updateFlag" style="width: 100%; max-height: 300px; display: block;">
         </highcharts-chart>
     </div>
     <ul class="m-0 p-0 border-0 outline-0 list-none">
